# thrift.tutorial

./: README.md  gen.sh
client/: CMakeLists.txt  Client.cpp  build.sh  client-thrift
gen-cpp/: Calculator.cpp  Calculator.h  Calculator_server.skeleton.cpp  SharedService.cpp  SharedService.h  SharedService_server.skeleton.cpp  sharedmath_constants.cpp  sharedmath_constants.h  sharedmath_types.cpp  sharedmath_types.h  tutorialmath_constants.cpp  tutorialmath_constants.h  tutorialmath_types.cpp  tutorialmath_types.h
server/: CMakeLists.txt  Server.cpp  build.sh  server-thrift
thrift/: sharedmath.thrift  tutorial.thrift  tutorialmath.thrift
